@@ -1292,6 +1292,10 @@ Sun Sep  1 11:13:04 CEST 2002
 
         - Synced preproc.y with gram.y.
         - Synced keywords.c.
+
+Wed Sep 11 10:43:17 CEST 2002
+
+	- Synced preproc.y with gram.y.
 	- Set ecpg version to 2.10.0.
 	- Set library version to 3.4.0.
 
